Mod manager progress

--- a/Flagrum.Web/Components/Modals/AlertModal.razor
+++ b/Flagrum.Web/Components/Modals/AlertModal.razor
@@ -7,7 +7,7 @@
         <div class="text-center w-full">
             <h3 class="mb-4 text-grey-300">@Heading</h3>
             <span class="block mb-20">
-                @Subtext
+                @((MarkupString)Subtext)
             </span>
         </div>
     </BodyView>
