--- a/Flagrum.Web/Components/Modals/PromptModal.razor
+++ b/Flagrum.Web/Components/Modals/PromptModal.razor
@@ -1,4 +1,4 @@
-﻿<Modal @ref="Modal">
+﻿<AutosizeModal @ref="Modal">
     <HeaderView>
         <span class="text-grey-300 flex-grow">@Title</span>
     </HeaderView>
@@ -6,17 +6,17 @@
         <div class="text-center w-full">
             <h3 class="mb-4 text-grey-300">@Heading</h3>
             <span class="block mb-10">
-                @Subtext
+                @((MarkupString)Subtext)
             </span>
-            <Button Text="@YesText" OnClick="() => Close(true)" CssClass="mr-1.5 mb-10" />
-            <Button Text="@NoText" OnClick="() => Close(false)" CssClass="ml-1.5 mb-10" />
+            <Button Text="@YesText" OnClick="() => Close(true)" CssClass="mr-1.5 mb-6" />
+            <Button Text="@NoText" OnClick="() => Close(false)" CssClass="ml-1.5 mb-6" />
         </div>
     </BodyView>
-</Modal>
+</AutosizeModal>
 
 @code
 {
-    private Modal Modal { get; set; }
+    private AutosizeModal Modal { get; set; }
 
     [Parameter] public string Title { get; set; }
     [Parameter] public string Heading { get; set; }
